--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     
     /*border-top: #FAFAFA 6px solid;*/
     font-family: "Lobster";
+
     
 }
 
@@ -36,6 +37,7 @@ body {
     color: #FAFAFA;
     /*z-index: 100;*/
     height: 100vh;
+	box-shadow: inset 0px 0px 100px rgba(0, 0, 0, 0.3);
     
 }
 
