--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
     color: #FAFAFA;
     /*z-index: 100;*/
     height: 100vh;
-	box-shadow: inset 0px 0px 100px rgba(0, 0, 0, 0.3);
+    /*box-shadow: inset 0px 0px 100px rgba(0, 0, 0, 0.3);*/
     
 }
 
